argocd-managed/retroarch/Deployment.retroarch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: retroarch
  namespace: apps
  labels:
    app: retroarch
spec:
  replicas: 1
  selector:
    matchLabels:
      app: retroarch
  template:
    metadata:
      labels:
        app: retroarch
    spec:
      containers:
      - name: app
        image: antoine13/retroarch-web-games
        ports:
        - containerPort: 8080
