argocd-managed/retroarch/Service.retroarch.yaml
apiVersion: v1
kind: Service
metadata:
  name: retroarch
  namespace: apps
spec:
  selector:
    app: retroarch
  ports:
  - port: 8080
    targetPort: 8080
