argocd-managed/retroarch/Ingress.retroarch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: retroarch
spec:
 rules:
   - host: retroarch.my-minikube.com
     http:
       paths:
         - path: /
           pathType: Prefix
           backend:
             service:
               name: retroarch
               port:
                 number: 8080
